<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="1"
        android:title="@string/abc_search_hint"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:orderInCategory="2"
        android:title="@string/about"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/action_profile" android:title="@string/action_profile" app:showAsAction="never" />
            <item android:id="@+id/action_about" android:title="@string/about" app:showAsAction="never" />
            <item android:id="@+id/action_logoff" android:title="@string/action_logoff" app:showAsAction="never" />
        </menu>

    </item>
</menu>